--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <div class="row">
       <div class="col-md-4 mb-5">
-        <div class="card" data-toggle="modal" data-target="#myModal">
+        <div class="card clickable" data-toggle="modal" data-target="#myModal">
           <div id="STS" class"card-image">
             <div class="card-title">
             <p> Save The Sea | App</p>
