--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 
       <div class="col-md-4 mb-5">
-        <div class="card" data-toggle="modal" data-target="#myGNTModal">
+        <div class="card clickable" data-toggle="modal" data-target="#myGNTModal">
           <div id="GNT" class"card-image">
             <div class="card-title">
               <p> GNT | Design and Motion</p>
@@ -211,7 +211,7 @@
     </div>
 
       <div class="col-md-4 mb-5">
-        <div class="card" data-toggle="modal" data-target="#myGalloModal">
+        <div class="card clickable" data-toggle="modal" data-target="#myGalloModal">
           <div id="Gallo" class"card-image">
             <div class="card-title">
               <p> Gallo | Motion Graphic</p>
@@ -289,7 +289,7 @@
 <!-- /.row -->
     <div class="row">
       <div class="col-md-4 mb-5">
-        <div class="card" data-toggle="modal" data-target="#myRoeModal">
+        <div class="card clickable" data-toggle="modal" data-target="#myRoeModal">
           <div id="Roe" class"card-image">
             <div class="card-title">
               <p>Roe & Co | Motion Graphic</p>
@@ -342,7 +342,7 @@
     </div>
 
       <div class="col-md-4 mb-5">
-        <div class="card" data-toggle="modal" data-target="#myJWModal">
+        <div class="card clickable" data-toggle="modal" data-target="#myJWModal">
           <div id="JW" class"card-image">
             <div class="card-title">
               <p>Johnnie Walker | Motion Graphic</p>
@@ -424,7 +424,7 @@
     </div>
 
       <div class="col-md-4 mb-5">
-        <div class="card" data-toggle="modal" data-target="#myNHSModal">
+        <div class="card clickable" data-toggle="modal" data-target="#myNHSModal">
           <div id="NHS" class"card-image">
             <div class="card-title">
               <p>NHS | Design & Motion Graphic</p>
@@ -488,7 +488,7 @@
     <!-- /.row -->
         <div class="row">
           <div class="col-md-4 mb-5">
-            <div class="card" data-toggle="modal" data-target="#myEmbraerModal">
+            <div class="card clickable" data-toggle="modal" data-target="#myEmbraerModal">
               <div id="Embraer" class"card-image">
                 <div class="card-title">
                   <p>Embraer | Design</p>
@@ -551,7 +551,7 @@
 
 
           <div class="col-md-4 mb-5">
-            <div class="card" data-toggle="modal" data-target="#myYMCAModal">
+            <div class="card clickable" data-toggle="modal" data-target="#myYMCAModal">
               <div id="YMCA" class"card-image">
                 <div class="card-title">
                   <p>YMCA | 360 Video</p>
@@ -647,7 +647,7 @@
         </div>
 
           <div class="col-md-4 mb-5">
-            <div class="card" data-toggle="modal" data-target="#myMillerModal">
+            <div class="card clickable" data-toggle="modal" data-target="#myMillerModal">
               <div id="Miller" class"card-image">
                 <div class="card-title">
                   <p>Miller | Motion Graphic</p>
