--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div id="social">
   <div>
     <a href="https://www.linkedin.com/in/alex-mcdowell-23708611b/"><img src="assets/linkedin.png"></a>
-    <a href="https://www.instagram.com/a_m_digital/"><img src="assets/insta.png"></a>
+    <a href="https://www.instagram.com/a_m_digital/"><img src="assets/Insta.png"></a>
     <img src="assets/CV.png">
   </div>
 </div>
