--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
   <!-- Navigation -->
 <div id="social">
   <div>
-    <a href="https://www.linkedin.com/in/alex-mcdowell-23708611b/"><img src="assets/linkedin.png"></a>
-    <a href="https://www.instagram.com/a_m_digital/"><img src="assets/Insta.png"></a>
-    <img src="assets/CV.png">
+    <a href="https://www.linkedin.com/in/alex-mcdowell-23708611b/"><img class="clickable" src="assets/linkedin.png"></a>
+    <a href="https://www.instagram.com/a_m_digital/"><img class="clickable" src="assets/Insta.png"></a>
+    <a href="assets/CV.pdf" download="alexmcdowellcv" id="alexmcdowellcv" target="_blank"><img class="clickable" src="assets/CV.png"></a>
   </div>
 </div>
+
+
 
   <!-- Header -->
   <header class="py-5 mb-5">
@@ -245,8 +247,8 @@
               </div>
               <div class="row">
                 <div class="paragraph">
-                <p>To celebrate summer, Gallo wanted to produce some fun and colourful posts advertising their ‘Spritz’ collection. Each Gallo wine bottle has its own personality and flavour, the aim for these pieces were to encapture this visually. The flavours presented were Raspberry and Lime, Peach and Nectarine, Wild Strawberry, and Pineapple and Passionfruit.<br><br>
-                  I was given assets consisting of an array of patterns, fruits and plants. I had choose which assets to include, and edit them to slowly transition from behind the gallo wine bottle labels. I was given a lot of freedom with this brief and could decide the movement, positioning, timing, assets and music used in each video.
+                <p>To celebrate summer, Gallo wanted to produce some fun and colourful posts advertising their ‘Spritz’ collection. Each Gallo wine bottle has its own personality and flavour, the aim for these pieces was to encapture this visually. The flavours presented were Raspberry and Lime, Peach and Nectarine, Wild Strawberry, and Pineapple and Passionfruit.<br><br>
+                  I was given assets consisting of an array of patterns, fruits and plants. I had chosen which assets to include, and edit them to slowly transition from behind the Gallo wine bottle labels. I was given a lot of freedom with this brief and could decide the movement, positioning, timing, assets and music used in each video.
             </p>
               </div>
             </div>
@@ -321,7 +323,7 @@
                 </div>
                 <div class="row">
                   <div class="paragraph">
-                  <p>Roe & Co wanted to revamp some footage to be released on St Paddys day. The brief was to make it stylish and sleek and come to 30 seconds in length. They wanted the storyline to still flow and make sense. I chose to make the editing flow with the music chosen and shape the piece around this aspect. I was very pleased with the outcome and felt that it reflected Roe & Co’s style.
+                  <p>Roe & Co wanted to revamp some footage to be released on St Paddy's day. The brief was to make it stylish and sleek and come to 30 seconds in length. They wanted the storyline to still flow and make sense. I chose to make the editing flow with the music chosen and shape the piece around this aspect. I was very pleased with the outcome and felt that it reflected Roe & Co’s style.
               </p>
                 </div>
               </div>
@@ -375,7 +377,7 @@
 
                 <div class="row">
                   <div class="paragraph">
-                  <p> The British Grand Prix was held in Silverstone where Johnnie Walker provided their iconic Johnnie Walker Highball cocktails. The brief was to create a fast-paced, clean cut short film of the event which could be used on their social media. They wanted to include shots of the bar, the Johnnie Walker figurine and people socialising and drinking. Ensuring that a lot of information was used, capturing the event within a small amount of time was a difficult task but I feel the balance was found perfectly. The same brief was then given but for the German Grand Prix.
+                  <p> The British Grand Prix was held in Silverstone where Johnnie Walker provided their iconic Johnnie Walker Highball cocktails. The brief was to create a fast-paced, clean-cut short film of the event which could be used on their social media. They wanted to include shots of the bar, the Johnnie Walker figurine and people socialising and drinking. Ensuring that a lot of information was used, capturing the event within a small amount of time was a difficult task but I feel the balance was found perfectly. The same brief was then given but for the German Grand Prix.
                 </div>
               </div>
 
@@ -458,7 +460,7 @@
                     </div>
                     <div class="row">
                       <div class="paragraph">
-                      <p> The NHS needed six motion graphic videos to raise awareness in improving healthcare services. These visually represent to employees’ issues that have occurred in the past, and how systems have changed to ensure these don’t repeat. Each video includes a Case Study to highlight past situations
+                      <p> The NHS needed six motion graphic videos to raise awareness in improving healthcare services. These visually represent to employees’ issues that have occurred in the past, and how systems have changed to ensure these don’t repeat. Each video includes a Case Study to highlight past situations.
                       </p>
                     </div>
                   </div>
@@ -522,7 +524,7 @@
                           <div class="row">
                             <div class="paragraph">
                             <p>
-                              Embraer needed a series of banners designed for their new aircraft. This brief allowed me to improve my design skills and develop my understanding on what exported assets are needed for the developers who code the banners.
+                              Embraer needed a series of banners designed for their new aircraft. This brief allowed me to improve my design skills and develop my understanding of what exported assets are needed for the developers who code the banners.
                         </p>
                           </div>
                         </div>
@@ -583,9 +585,9 @@
                     </div>
                     <div class="row">
                       <div class="paragraph">
-                      <p>During my university placement year at Southpaw, West Kent YMCA launched a campaign called ‘Don’t Look The Other Way’. Southpaw set out to create a 360 degree video that would highlight how the general public would look away when encountering homeless people on the street.
+                      <p>During my university placement year at Southpaw, West Kent YMCA launched a campaign called ‘Don’t Look The Other Way’. Southpaw set out to create a 360-degree video that would highlight how the general public would look away when encountering homeless people on the street.
 <br><br> I played a big role in this project. I was given the responsibility of filming and editing. I had to ensure that what we wanted to create was achievable with our technology and that ideas put forward for the video were brought to life to the best of our best ability. I also directed Becky, a girl whose life was turned around because of the YMCA, during the shoot.
-<br><br>Simply click and drag the screen if you're on desktop or use the 360-degree functionality if you're on mobile. It's even better if you have a VR headset or Google Cardboard. Best viewed in Chrome or via the YouTube App:
+<br><br>Simply click and drag the screen if you're on a desktop or use the 360-degree functionality if you're on mobile. It's even better if you have a VR headset or Google Cardboard. Best viewed in Chrome or via the YouTube App:
 <br><br>                </p>
                     </div>
                   </div>
@@ -600,7 +602,7 @@
                   <div class="row">
                     <div class="paragraph">
                     <p>
-                      The film was released on Facebook, YouTube, Instagram and Twitter, with paid media to boost the posts. Uniquely designed Google Cardboards were distributed to members of the public for donations in Tunbridge Wells shopping centre. A stand was set up where they could experience the film using an Oculus Rift. Footage was gathered from the fundraising day which was then used to create the case study video. Seeing the reactions of the public was incredible and I was happy to see how our work had impacted people.
+                      The film was released on Facebook, YouTube, Instagram and Twitter, with paid media to boost the posts. Uniquely designed Google Cardboards were distributed to members of the public for donations in Tunbridge Wells shopping centre. A stand was set up where they could experience the film using an Oculus Rift. The footage was gathered from the fundraising day which was then used to create the case study video. Seeing the reactions of the public was incredible and I was happy to see how our work had impacted people.
                 </p>
                   </div>
                 </div>
@@ -614,7 +616,7 @@
                 <div class="row">
                   <div class="paragraph">
                   <p>
-                    In addition to filming on the shoot I also did the photography that was used to create posters and advertisements.
+                    In addition to filming on the shoot, I also did the photography that was used to create posters and advertisements.
               </p>
                 </div>
               </div>
@@ -678,7 +680,7 @@
                     </div>
                     <div class="row">
                       <div class="paragraph">
-                      <p>Miller wanted to repurpose some content so that it could be used on their social media again. I therefore was given the task of taking an image and turning it into a moving cinemagraph. This would add life and create a seamless looping video which can be used across their media platforms. To do this I manipulated the images given to me on Photoshop. I cut out different sections of the image and saved out multiple different layers which I could then manipulate on After Effects to create looping movement. The different movement I added included, drips, steam, opening a bottle and light flares. Although this is a relatively simple idea it was very affective and created some great content. In After Effects I utilised a plugin called Trapcode Particular to create my desired look.
+                      <p>Miller wanted to repurpose some content so that it could be used on their social media again. I, therefore, was given the task of taking an image and turning it into a moving cinemagraph. This would add life and create a seamless looping video which can be used across their media platforms. To do this I manipulated the images given to me on Photoshop. I cut out different sections of the image and saved out multiple different layers which I could then manipulate on After Effects to create looping movement. The different movement I added included, drips, steam, opening a bottle and light flares. Although this is a relatively simple idea it was very effective and created some great content. In After Effects I utilised a plugin called Trapcode Particular to create my desired look.
                   </p>
                     </div>
                   </div>
@@ -766,7 +768,7 @@
   <!-- /.row -->
   <div class="row">
     <div class="paragraph">
-      <p> I am Alex McDowell. Graduating with a First Class Honours in Multimedia technology and design in 2019 I have persued a career focusing in Design and Motion Graphics, I’ve worked for brands both big and small, crafting creative solutions across film and design.</p>
+      <p> I am Alex McDowell. Graduating with a First Class Honours in Multimedia technology and design in 2019 I have pursued a career focusing in Design and Motion Graphics, I’ve worked for brands both big and small, crafting creative solutions across film and design.</p>
     </div>
   </div>
 
