--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
   <!-- /.row -->
   <div class="row">
     <div class="paragraph">
-      <p> I am Alex McDowell. Graduating with a First Class Honours in Multimedia technology and design in 2019 I have pursued a career focusing in Design and Motion Graphics, I’ve worked for brands both big and small, crafting creative solutions across film and design.</p>
+      <p> I am Alex McDowell. Graduating with a First Class Honours in Multimedia Technology and Design in 2019 I have pursued a career focusing in Design and Motion Graphics. I have worked for brands both big and small, providing creative solutions across film and design.</p>
     </div>
   </div>
 
