--- a/index.html
+++ b/index.html
@@ -62,13 +62,55 @@
     <div class="row">
       <div class="col-md-4 mb-5">
         <div class="card clickable" data-toggle="modal" data-target="#myModal">
-          <div id="STS" class"card-image">
+          <div id="Flix" class"card-image">
             <div class="card-title">
-            <p> Save The Sea | App</p>
+            <p> Flix Premiere | Film</p>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <div class="container">
+
+                <!-- /.row -->
+
+                <div class="row title">
+                    <div class="line col-md-5 col-sm-4 col-2">
+                    </div>
+                      <div class="col-md-2 col-sm-4 col-8">
+                        <h1>Flix Premiere</h1>
+                      </div>
+                    <div class="line col-md-5 col-sm-4 col-2">
+                    </div>
+                </div>
+                <div class="row">
+                  <div class="paragraph">
+                  <p>Flix Premiere is a subscription-based streaming service which offers online streaming of films. My brief was to create a 60 second sizzle trailer for the site, utilising content from a minimum of 6 trailers. I had to produce my final product in 24 hours, the challenge excited me, and I felt I excelled. In this time, I storyboarded the trailer, selected the footage, music and edited on After Effects to produce my final output.
+                </p>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="column-12 embed-responsive embed-responsive-16by9">
+                  <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/ma-8GA1wgPI?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+              </div>
+              </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
       <div class="modal fade" id="myModal" role="dialog">
         <div class="modal-dialog">
@@ -126,10 +168,10 @@
 
 
       <div class="col-md-4 mb-5">
-        <div class="card clickable" data-toggle="modal" data-target="#myGNTModal">
-          <div id="GNT" class"card-image">
+        <div class="card clickable" data-toggle="modal" data-target="#myGalloModal">
+          <div id="Gallo" class"card-image">
             <div class="card-title">
-              <p> GNT | Design and Motion</p>
+              <p> Gallo | Motion Graphic</p>
             </div>
           </div>
         </div>
@@ -213,10 +255,10 @@
     </div>
 
       <div class="col-md-4 mb-5">
-        <div class="card clickable" data-toggle="modal" data-target="#myGalloModal">
-          <div id="Gallo" class"card-image">
+        <div class="card clickable" data-toggle="modal" data-target="#myNHSModal">
+          <div id="NHS" class"card-image">
             <div class="card-title">
-              <p> Gallo | Motion Graphic</p>
+              <p> NHS | Design & Motion Graphic</p>
             </div>
           </div>
         </div>
@@ -344,14 +386,60 @@
     </div>
 
       <div class="col-md-4 mb-5">
-        <div class="card clickable" data-toggle="modal" data-target="#myJWModal">
-          <div id="JW" class"card-image">
+        <div class="card clickable" data-toggle="modal" data-target="#myDesignModal">
+          <div id="Personal" class"card-image">
             <div class="card-title">
-              <p>Johnnie Walker | Motion Graphic</p>
+              <p>Personal | Design</p>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="modal fade" id="mySantanderModal" role="dialog">
+        <div class="modal-dialog">
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+              <div class="container">
+
+                <!-- /.row -->
+
+                <div class="row title">
+                    <div class="line col-md-4 col-sm-4 col-2">
+                    </div>
+                      <div class="col-md-4 col-sm-4 col-8">
+                        <h1>Santander</h1>
+                      </div>
+                    <div class="line col-md-4 col-sm-4 col-2">
+                    </div>
+                </div>
+
+                <div class="row">
+                  <div class="paragraph">
+                  <p>Recently Santander has released a new banking App. I had the opportunity to create a short video advertising its benefits and that the iPhone and android app is being released.
+
+
+                </div>
+              </div>
+
+                <div class="row Video">
+                  <div class="column-12 embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/mdm74Qx9kuQ?rel=0&amp;controls=0;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                  </div>
+                </div>
+
+              </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
       <div class="modal fade" id="myJWModal" role="dialog">
         <div class="modal-dialog">
@@ -426,10 +514,10 @@
     </div>
 
       <div class="col-md-4 mb-5">
-        <div class="card clickable" data-toggle="modal" data-target="#myNHSModal">
-          <div id="NHS" class"card-image">
+        <div class="card clickable" data-toggle="modal" data-target="#myModal">
+          <div id="STS" class"card-image">
             <div class="card-title">
-              <p>NHS | Design & Motion Graphic</p>
+              <p>Save The Sea | App</p>
             </div>
           </div>
         </div>
@@ -460,7 +548,7 @@
                     </div>
                     <div class="row">
                       <div class="paragraph">
-                      <p> The NHS needed six motion graphic videos to raise awareness in improving healthcare services. These visually represent to employees’ issues that have occurred in the past, and how systems have changed to ensure these don’t repeat. Each video includes a Case Study to highlight past situations.
+                      <p> The NHS needed six motion graphic videos to raise awareness in improving healthcare services. These visually represent to employees’ issues that have occurred in the past, and how systems have changed to ensure these don’t repeat. Each video includes a Case Study to highlight past situations. My colleague and I created storyboards and designed and edited all of the videos ourselves. This included the illustration style, colour palette, music and animation techniques. We were given a lot of creative freedom, with our visual guidance being minimal! Sometimes visually representing what the case study demonstrated was challenging but we wanted it to be as clear and simple as possible. We ensured a professional yet still visually pleasing style throughout.
                       </p>
                     </div>
                   </div>
@@ -468,15 +556,11 @@
 
                   <div class="row Video">
                     <div class="column-12 embed-responsive embed-responsive-16by9">
-                      <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/3cxwYWMPUgU?rel=0&amp;controls=0;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                      <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/fCOyV_TSzbo?rel=0&amp;controls=0;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </div>
                   </div>
 
-                  <div class="row Video">
-                    <div class="column-12 embed-responsive embed-responsive-16by9">
-                      <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/StwZxPImcF0?rel=0&amp;controls=0;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
-                  </div>
+
 
                   </div>
                 <div class="modal-footer">
@@ -524,7 +608,7 @@
                           <div class="row">
                             <div class="paragraph">
                             <p>
-                              Embraer needed a series of banners designed for their new aircraft. This brief allowed me to improve my design skills and develop my understanding of what exported assets are needed for the developers who code the banners.
+                              Embraer is a Brazilian aerospace conglomerate that produces commercial, military, executive and agricultural aircraft. They needed a series of banners designed for their new aircraft. This brief allowed me to improve my design skills and develop my understanding of what exported assets are needed for the developers who code the banners.
                         </p>
                           </div>
                         </div>
@@ -542,6 +626,22 @@
                         <div class="row Assets">
                             <img src="assets/Embraer_970x250.png">
                         </div>
+
+                        <div class="row">
+                          <div class="paragraph">
+                          <p>
+                            In addition, I was briefed to create a Motion graphic to demonstrate where the Embraer E2 jet destinations are. For this project I created all the assets in illustrator and animated in After Effects.
+                      </p>
+                        </div>
+                      </div>
+
+                        <div class="row Video">
+                          <div class="column-12 embed-responsive embed-responsive-16by9">
+                            <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/RskHOB4Fu74?rel=0&amp;controls=0;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                          </div>
+                        </div>
+
+
                         </div>
                       <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -553,10 +653,10 @@
 
 
           <div class="col-md-4 mb-5">
-            <div class="card clickable" data-toggle="modal" data-target="#myYMCAModal">
-              <div id="YMCA" class"card-image">
+            <div class="card clickable" data-toggle="modal" data-target="#myMillerModal">
+              <div id="Miller" class"card-image">
                 <div class="card-title">
-                  <p>YMCA | 360 Video</p>
+                  <p>Miller | Cinemagraphs</p>
                 </div>
               </div>
             </div>
@@ -649,14 +749,97 @@
         </div>
 
           <div class="col-md-4 mb-5">
-            <div class="card clickable" data-toggle="modal" data-target="#myMillerModal">
-              <div id="Miller" class"card-image">
+            <div class="card clickable" data-toggle="modal" data-target="#mySantanderModal">
+              <div id="Santander" class"card-image">
                 <div class="card-title">
-                  <p>Miller | Motion Graphic</p>
+                  <p>Santander | Motion Graphic</p>
                 </div>
               </div>
             </div>
           </div>
+
+          <div class="modal fade" id="myDesignModal" role="dialog">
+            <div class="modal-dialog">
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                  <div class="container">
+
+                    <!-- /.row -->
+
+                    <div class="row title">
+                        <div class="line col-md-2 col-sm-2 col-2">
+                        </div>
+                          <div class="col-md-8 col-sm-8 col-8">
+                            <h1>Personal Design & Illustration</h1>
+                          </div>
+                        <div class="line col-md-2 col-sm-2 col-2">
+                        </div>
+                    </div>
+                    <div class="row">
+                      <div class="paragraph">
+                      <p>I have always had a passion for graphic design and illustration. One of my hobbies is to create prints for people, whether this be as a gift to my friend or a commission piece. Below are some of my prints I have created in the past couple years.
+                  </p>
+                    </div>
+                  </div>
+
+
+                  <div class="row Assets_2">
+                      <img src="assets/Prints_1.jpg">
+                  </div>
+
+                  <div class="row Assets_2">
+                      <img src="assets/Prints_2.jpg">
+                  </div>
+
+                  <div class="row">
+                    <div class="paragraph">
+                    <p>Recently I have started to design business cards and logos for companies. Below are potential deisgns for a brochure and business card created for a personal trainer.
+                  </p>
+                </div>
+              </div>
+
+                  <div class="row Assets_2">
+                      <img src="assets/Conrad_business_Card.png">
+                  </div>
+
+                  <div class="row Assets_2">
+                      <img src="assets/Leaflet.jpg">
+                  </div>
+
+                  <div class="row">
+                    <div class="paragraph">
+                    <p>Below are some assets I designed and created for my final year project at university which I achieved a first for. My project was an integrated website called GNT which educated users on the topic of gin through interactive elements. This project allowed me to explore and develop many of my skills. This included photography, illustration, website design, coding and copywriting. Website design is definitely an area I would like to explore more.
+                  </p>
+                </div>
+                </div>
+
+              <div class="row">
+                <img class="Assets" src="assets/GNTAsset1.png">
+              </div>
+              <div class="row">
+                <img class="Assets" src="assets/GNTAsset2.png">
+              </div>
+
+            <div class="row">
+              <img class="Assets" src="assets/Cheers.gif">
+            </div>
+
+
+                  </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
           <div class="modal fade" id="myMillerModal" role="dialog">
             <div class="modal-dialog">
               <!-- Modal content-->
@@ -722,6 +905,7 @@
             </div>
           </div>
         </div>
+
         </div>
       </div>
   <!-- /.container -->
