--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div class="row">
       <div class="col-md-4 mb-5">
-        <div class="card clickable" data-toggle="modal" data-target="#myModal">
+        <div class="card clickable" data-toggle="modal" data-target="#myFlixModal">
           <div id="Flix" class"card-image">
             <div class="card-title">
             <p> Flix Premiere | Film</p>
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal fade" id="myFlixModal" role="dialog">
         <div class="modal-dialog">
           <!-- Modal content-->
           <div class="modal-content">
@@ -812,14 +812,15 @@
 
                   <div class="row">
                     <div class="paragraph">
-                    <p>Below are some assets I designed and created for my final year project at university which I achieved a first for. My project was an integrated website called GNT which educated users on the topic of gin through interactive elements. This project allowed me to explore and develop many of my skills. This included photography, illustration, website design, coding and copywriting. Website design is definitely an area I would like to explore more.
-                  </p>
+                    <p>Below are some assets I designed and created for my final year project at university which I achieved a first for. My project was an integrated website called GNT which educated users on the topic of gin through interactive elements. This project allowed me to explore and develop many of my skills. This included photography, illustration, website design, coding and copywriting. Website design is definitely an area I would like to explore
+                      more.</p>
                 </div>
                 </div>
 
               <div class="row">
                 <img class="Assets" src="assets/GNTAsset1.png">
               </div>
+
               <div class="row">
                 <img class="Assets" src="assets/GNTAsset2.png">
               </div>
