--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </div>
 
             <div class="row">
-              <img class="Assets" src="assets/Cheers.gif">
+              <img class="Assets" src="assets/cheers.gif">
             </div>
 
             <div class="row">
