--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
               </div>
             </div>
             <div class="row">
-              <img class="Assets" src="assets/cheers.gif">
+              <img class="Assets" src="assets/cheers_drinks.gif">
             </div>
 
             <div class="row">
